--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ I’m skilled in Python, C++, and Java, with a strong foundation in database man
 								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>-->
 								<li><a href="https://github.com/nitar31" class="icon brands fa-github alt" target="_blank"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/sainilohitamale/" class="icon brands fa-linkedin alt" target="_blank"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/sai-nilohita-male-6b4069339/" class="icon brands fa-linkedin alt" target="_blank"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</section>
 						<p class="copyright">&copy; 2024 Sai Male. All Rights Reserved.</p>
