--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 										<header class="major">
 											<h2>Introduction</h2>
 										</header>
-										<p>Welcome to My Portfolio
-Hello! I’m Sai, a Computer Science student at Carleton University with a passion for tackling complex problems using technology and data-driven approaches. <br> As I pursue my Bachelor’s degree with minors in Mathematics and Statistics, I’m constantly exploring the intersection of computer science, ethical AI practices, and algorithmic design.
-I’ve gained hands-on experience through various projects, such as analyzing ethical integration in AI/ML workflows for my Honours Thesis and developing a reinforcement learning agent to tackle a customized Wordle challenge. <br> My background also includes serving as a Teaching Assistant, where I helped students navigate topics like algorithm complexity, set theory, and graph theory.
+										<p>Welcome to My Portfolio <br> <br>
+Hello! I’m Sai, a Computer Science student at Carleton University with a passion for tackling complex problems using technology and data-driven approaches. <br><br> As I pursue my Bachelor’s degree with minors in Mathematics and Statistics, I’m constantly exploring the intersection of computer science, ethical AI practices, and algorithmic design.
+I’ve gained hands-on experience through various projects, such as analyzing ethical integration in AI/ML workflows for my Honours Thesis and developing a reinforcement learning agent to tackle a customized Wordle challenge. <br><br> My background also includes serving as a Teaching Assistant, where I helped students navigate topics like algorithm complexity, set theory, and graph theory.
 I’m skilled in Python, C++, and Java, with a strong foundation in database management, data analysis, and software design. Whether it's creating communication simulations in C, optimizing algorithms, or exploring ethical AI, I’m always eager to learn and contribute to meaningful projects.
-<br>Feel free to explore my work and reach out if you'd like to connect!
+<br><br>Feel free to explore my work and reach out if you'd like to connect!
 </p>
 										<!--
 										<ul class="actions">
