--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 										<header class="major">
 											<h2>Introduction</h2>
 										</header>
-										<p>Welcome to My Portfolio <br> <br>
-Hello! I’m Sai, a Computer Science student at Carleton University with a passion for tackling complex problems using technology and data-driven approaches. <br><br> As I pursue my Bachelor’s degree with minors in Mathematics and Statistics, I’m constantly exploring the intersection of computer science, ethical AI practices, and algorithmic design.
+										<p>Welcome to My Portfolio<br><br>
+										I’m a Computer Science student at Carleton University who enjoys solving complex problems, especially in the fields of machine learning and AI. I’m driven by a desire to apply my skills to create impactful, data-driven solutions. <br><br> As I pursue my Bachelor’s degree with minors in Mathematics and Statistics, I’m constantly exploring the intersection of computer science, ethical AI practices, and algorithmic design.
 I’ve gained hands-on experience through various projects, such as analyzing ethical integration in AI/ML workflows for my Honours Thesis and developing a reinforcement learning agent to tackle a customized Wordle challenge. <br><br> My background also includes serving as a Teaching Assistant, where I helped students navigate topics like algorithm complexity, set theory, and graph theory.
-I’m skilled in Python, C++, and Java, with a strong foundation in database management, data analysis, and software design. Whether it's creating communication simulations in C, optimizing algorithms, or exploring ethical AI, I’m always eager to learn and contribute to meaningful projects.
+I’m skilled in Python, C++, and Java, with a strong foundation in data analysis and software design. Whether it's creating communication simulations in C, optimizing algorithms, or exploring ethical AI, I’m always eager to learn and contribute to meaningful projects.
 <br><br>Feel free to explore my work and reach out if you'd like to connect!
 </p>
 										<!--
@@ -66,19 +66,19 @@ I’m skilled in Python, C++, and Java, with a strong foundation in database man
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Project 1</h3>
-										<p>Description of project 1.</p>
+										<img src="images/ethical-ai.png" alt="Ethical AI Icon" class="icon">
+										<h3>Ethical Principles in AI/ML Workflows</h3>
+										<p>This thesis project investigates the integration of ethical principles in AI/ML workflows, aiming to understand the current rate and challenges of implementing ethical standards in real-world applications. The study involves analyzing closed issues from AI/ML GitHub projects using large language models (LLMs) to detect ethical concerns and identify patterns. Additionally, interviews and surveys with developers and data scientists will provide insights into their awareness of ethical principles and the practical obstacles they face. This project contributes to the field by exploring both technical and human factors involved in promoting ethical AI development.</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Project 2</h3>
-										<p>Description of project 2.</p>
+										<img src="images/wordle.png" alt="Ethical AI Icon" class="icon">
+										<h3>Wordle Reinforcement Learning Agent</h3>
+										<p>Collaborated on a team project to design and implement a reinforcement learning (RL) agent specialized in solving an variation of the popular game Wordle. The project involved creating multiple RL agents using different algorithms (such as Markov Decision Processes and Deep Reinforcement Learning) to explore optimal strategies. Our approach included injecting probabilistic noise to test the robustness of the agents, as well as experimenting with various game configurations to analyze changes in playstyle. The project showcased practical applications of RL in a constrained environment and provided insights into how AI can adapt strategies based on feedback.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Project 3</h3>
-										<p>Description of project 3.</p>
+										<img src="images/hunting.png" alt="Ethical AI Icon" class="icon">
+										<h3>Ghost Hunting</h3>
+										<p>Developed a multi-threaded C program to simulate a ghost-hunting mission inspired by the game Phasmophobia. This project utilized concepts like dynamic memory allocation, linked lists, and mutexes to simulate the interactions between ghost hunters and a ghost in a building with interconnected rooms. The system featured independent threads for each entity, enabling real-time actions such as evidence collection, communication, and movement. The hunters aimed to gather evidence to identify the ghost while managing fear levels, while the ghost roamed and left clues. The project emphasized resource management, synchronization, and concurrency, providing hands-on experience with systems-level programming.</p>
 									</li>
 								</ul>
 								<!--
