--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ I’m skilled in Python, C++, and Java, with a strong foundation in data analysi
 								</header>
 								<ul class="features">
 									<li>
-										<span>class="icon solid major style1 fa-code"></span>
+										<span class="icon solid major style1 fa-code"></span>
 										<h3>Ethical Principles in AI/ML Workflows</h3>
 										<p>This thesis project investigates the integration of ethical principles in AI/ML workflows, aiming to understand the current rate and challenges of implementing ethical standards in real-world applications. The study involves analyzing closed issues from AI/ML GitHub projects using large language models (LLMs) to detect ethical concerns and identify patterns. Additionally, interviews and surveys with developers and data scientists will provide insights into their awareness of ethical principles and the practical obstacles they face. This project contributes to the field by exploring both technical and human factors involved in promoting ethical AI development.</p>
 									</li>
